[package]
name = "memorize"
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lbfalvy/memorize"
description = """
Versatile and fast closure cacher with support for recursive algorithms
"""
authors = ["Lawrence Bethlenfalvy <lbfalvy@protonmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14"
